Issue fix for encryption and decryption